--- a/app/src/main/res/layout/fragment_prepare.xml
+++ b/app/src/main/res/layout/fragment_prepare.xml
@@ -7,12 +7,27 @@
     tools:context=".modules.recipe_view.preparing.PrepareFragment"
     android:weightSum="100">
 
-
     <FrameLayout
-        android:id="@+id/frame_video"
         android:layout_weight="35"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp">
+
+        <FrameLayout
+            android:id="@+id/frame_video"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:id="@+id/iv_placeholder"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:src="@drawable/image_recipe_placeholder"
+            android:layout_width="128dp"
+            android:layout_height="128dp" />
+
+    </FrameLayout>
+
+
 
 
     <RelativeLayout
@@ -37,7 +52,29 @@
             android:layout_height="60dp"
             android:weightSum="100">
 
-            <Button
+            <TextView
+                android:id="@+id/btn_previous_step"
+                android:text="@string/previous_step"
+                android:layout_weight="50"
+                android:layout_width="0dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:background="@drawable/button_steps_background"
+                android:textColor="@color/white"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/btn_next_step"
+                android:text="@string/next_step"
+                android:layout_weight="50"
+                android:layout_width="0dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:background="@drawable/button_steps_background"
+                android:textColor="@color/white"
+                android:layout_height="match_parent" />
+
+        <!--    <Button
                 android:id="@+id/btn_previous_step"
                 android:layout_width="0dp"
                 android:text="@string/previous_step"
@@ -49,7 +86,7 @@
                 android:text="@string/next_step"
                 android:layout_weight="50"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" />-->
 
 
         </LinearLayout>
